tests/paczka1/small_fuzzy/81818068.err
Error in line 3: ayI24aawmr A972 41,7
Error in line 4: ayI24aawmr A452 51,0
Error in line 6: A762 S24 34,0
Error in line 13: i2Af A972 9,60
Error in line 1: i2Af S24 88,3
